<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.zonesciences.flashcardanatomy.MainActivity">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/mainTitle"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeTitle"
        >

        <Button
            android:id="@+id/upperLimb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainUpperLimb"
            />
        <Button
            android:id="@+id/lowerLimb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainLowerLimb"
            android:onClick="openLowerLimb"
            />
        <Button
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainHead"
            />
        <Button
            android:id="@+id/neck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainNeck"
            />
        <Button
            android:id="@+id/thorax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainThorax"
            />
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainBack"
            />
        <Button
            android:id="@+id/abdomen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainAbdomen"
            />
        <Button
            android:id="@+id/pelvis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainPelvis"
            />
    </LinearLayout>
</RelativeLayout>
