<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zonesciences.flashcardanatomy.UpperLimb">

    <ImageView
            android:id="@+id/flashcardHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="Details"
            />
    <TextView
        android:id="@+id/flashcardSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flashcardHolder"
        android:layout_centerHorizontal="true"
        android:textSize="26dp"
        android:text="@string/textFlashcardSubtitle"/>
    <LinearLayout
        android:id="@+id/navigationPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flashcardSubtitle"
        android:layout_centerInParent="true">
    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPreviousFlashcard"
        android:onClick="prevFlashcard"/>

    <Button
        android:id="@+id/buttonDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDetails"
        android:onClick="details"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNextFlashcard"
        android:onClick="nextFlashcard"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/navigationPanel">

            <TextView
                android:id="@+id/structureName"
                android:text="STRUCTURE NAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/origin"
                android:text="ORIGIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/insertion"
                android:text="INSERTION"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/muscleAction"
                android:text="MUSCLE ACTION"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/fileLocation"
                android:text="FILE LOCATION"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

    </LinearLayout>

</RelativeLayout>
